# agentic-ai

./: pyproject.toml  rfp_system.db
aws-agents/: strategic-roadmap-agent.py
server/: weather_service.py  weather_tools.py
