[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
    "ollama>=0.5.1",
    "reportlab>=4.4.1",
    "strands-agents>=0.1.7",
    "strands-agents-tools>=0.1.5",
]
